name:                AdventOfCode
version:             0.1.0.0
license-file:        LICENSE
author:              Rickard Fridvall
maintainer:          partim@live.com
build-type:          Simple

cabal-version:       >=1.10


executable main
  main-is: main.hs
  other-modules: AdventOfCode
  ghc-options: -fno-warn-tabs
  build-depends: template-haskell, MissingH, QuickCheck, base >=4.8 && <4.9
  default-language: Haskell2010

test-suite test-AdventOfCode
  type: exitcode-stdio-1.0
  main-is: testAdventOfCode.hs
  other-modules: AdventOfCode
  ghc-options: -w
  build-depends: template-haskell, MissingH, QuickCheck, test-framework, test-framework-quickcheck2, base >=4.8 && <4.9
  default-language: Haskell2010

